--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -8,11 +8,13 @@
         <div class="row h-100 align-items-center justify-content-center text-center">
             <div class="col-lg-10 align-self-end">
                 <h1 class="text-uppercase text-white font-weight-bold">Eksplorasi Dunia Asas Sains Komputer</h1>
-                <hr class="divider my-4" />
+                <hr class="divider my-4"/>
             </div>
             <div class="col-lg-8 align-self-baseline">
-                <p class="text-white-75 font-weight-light mb-5">Asas Sains Komputer ialah satu kajian terhadap asas teori maklumat dan pengiraan serta pelaksanaan dan penggunaannya dalam sistem komputer.</p>
-                <a class="btn btn-primary btn-xl js-scroll-trigger" href="/curriculum/computational_thinking">Belajar sekarang</a>
+                <p class="text-white-75 font-weight-light mb-5">Asas Sains Komputer ialah satu kajian terhadap asas
+                    teori maklumat dan pengiraan serta pelaksanaan dan penggunaannya dalam sistem komputer.</p>
+                <a class="btn btn-primary btn-xl js-scroll-trigger" href="/curriculum/computational_thinking">Belajar
+                    sekarang</a>
             </div>
         </div>
     </div>
@@ -23,11 +25,23 @@
         <div class="row justify-content-center">
             <div class="text-center">
                 <h2 class="text-white mt-0">Mengapakah anda perlu memilih mata pelajaran ini?</h2>
-                <hr class="divider light my-4" />
+                <hr class="divider light my-4"/>
                 <p class="text-white-50 mb-4">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim eu turpis egestas pretium aenean pharetra magna. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat. Ut lectus arcu bibendum at varius vel pharetra vel. Vulputate enim nulla aliquet porttitor lacus luctus. Cursus risus at ultrices mi tempus. Condimentum vitae sapien pellentesque habitant morbi tristique senectus et netus. Nunc scelerisque viverra mauris in. Vitae sapien pellentesque habitant morbi tristique. Sit amet purus gravida quis blandit turpis.
-
-                    Enim ut sem viverra aliquet eget sit amet tellus. Mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus. Pharetra magna ac placerat vestibulum. Sed velit dignissim sodales ut eu sem integer. Phasellus faucibus scelerisque eleifend donec pretium vulputate sapien nec. Phasellus faucibus scelerisque eleifend donec pretium vulputate. Hac habitasse platea dictumst quisque sagittis purus. Pellentesque eu tincidunt tortor aliquam. Urna molestie at elementum eu facilisis. Ultricies lacus sed turpis tincidunt id aliquet risus. Semper viverra nam libero justo laoreet sit. Vitae justo eget magna fermentum iaculis eu non diam phasellus. Nunc scelerisque viverra mauris in aliquam sem fringilla ut morbi. Dignissim sodales ut eu sem integer vitae justo eget. Facilisis magna etiam tempor orci eu lobortis elementum. Donec pretium vulputate sapien nec sagittis aliquam malesuada. Pharetra convallis posuere morbi leo urna molestie.
+                    Dalam dunia globalisasi ini, komputer merupakan alat yang sangat diperlukan dalam kehidupan
+                    sehari-hari kita. Terdapat banyak kemaslahatan dapat kita peroleh dengan mengambil mata pelajaran
+                    Asas Sains Komputer sejak Tingkatan 1. <br>
+                    <br>
+                    Selain itu, suasana pembelajaran juga adalah seronok dan selesa. Apabila program anda akhirnya
+                    mengeluarkan output yang dikehendaki setelah berhempas-pulas membetulkan segala ralat yang terdapat
+                    dalam program tersebut, anda akan berasa "seronok". Keadaannya dikatakan selesa kerana berdingin
+                    hawa dan bilangan pelajar juga biasanya tidak ramai. <br>
+                    <br>
+                    Tamabahan pula, pelajar-pelajar yang mengambil Sains Komputer mempunyai peluang pekerjaan yang lebih
+                    cerah. Teknologi seperti kepintaran buatan (AI), realiti berperantara (AR) dan juga realiti maya
+                    (VR) kini semakin kerap digunakan berbanding dahulu. Dengan penyediaan yang awal, anda akan lebih
+                    mudah untuk mendapatkan pekerjaan yang bergaji tinggi pada masa akan datang. <br>
+                    <br>
+                    Marilah kita mengeksporasi dunia asas sains komputer bersama!
                 </p>
             </div>
         </div>
@@ -37,7 +51,7 @@
 <section class="page-section" id="curriculum">
     <div class="container">
         <h2 class="text-center mt-0">Kurikulum</h2>
-        <hr class="divider my-4" />
+        <hr class="divider my-4"/>
         <div class="row">
             <a class="col-lg-3 col-md-6 text-center ca-item" href="curriculum/computational_thinking">
                 <div class="mt-5">
@@ -46,21 +60,22 @@
                     <p class="text-muted mb-0">Teknik-teknik asas untuk menyelesaikan masalah berbantukan komputer.</p>
                 </div>
             </a>
-            <a class="col-lg-3 col-md-6 text-center ca-item"  href="curriculum/data_representation">
+            <a class="col-lg-3 col-md-6 text-center ca-item" href="curriculum/data_representation">
                 <div class="mt-5">
                     <i class="fas fa-4x fa-boxes text-primary mb-4"></i>
                     <h3 class="h4 mb-2">Perwakilan Data</h3>
                     <p class="text-muted mb-0">Format-format fail imej dan audio serta nombor asas 2 dan 10.</p>
                 </div>
             </a>
-            <a class="col-lg-3 col-md-6 text-center ca-item"  href="curriculum/algorithms">
+            <a class="col-lg-3 col-md-6 text-center ca-item" href="curriculum/algorithms">
                 <div class="mt-5">
                     <i class="fas fa-4x fa-project-diagram text-primary mb-4"></i>
                     <h3 class="h4 mb-2">Algoritma</h3>
-                    <p class="text-muted mb-0">Perwakilan satu seri langkah dalam penyelesaian masalah dengan pseudokod dan carta alir.</p>
+                    <p class="text-muted mb-0">Perwakilan satu seri langkah dalam penyelesaian masalah dengan pseudokod
+                        dan carta alir.</p>
                 </div>
             </a>
-            <a class="col-lg-3 col-md-6 text-center ca-item"  href="curriculum/code">
+            <a class="col-lg-3 col-md-6 text-center ca-item" href="curriculum/code">
                 <div class="mt-5">
                     <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
                     <h3 class="h4 mb-2">Kod Arahan</h3>
@@ -81,7 +96,7 @@
             <div class="row no-gutters">
                 <div class="col-lg-4 col-sm-6">
                     <a class="careers-box">
-                        <img class="img-fluid" src="{% static 'home/images/gallery/web-developer.jpg' %}" alt="" />
+                        <img class="img-fluid" src="{% static 'home/images/gallery/web-developer.jpg' %}" alt=""/>
                         <div class="careers-box-caption">
                             <div class="career-name">Pembangun Web</div>
                             <div class="project-category text-white-50">Web Developer</div>
@@ -90,7 +105,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a class="careers-box">
-                        <img class="img-fluid" src="{% static 'home/images/gallery/hardware-engineer.jpg' %}" alt="" />
+                        <img class="img-fluid" src="{% static 'home/images/gallery/hardware-engineer.jpg' %}" alt=""/>
                         <div class="careers-box-caption">
                             <div class="career-name">Jurutera Perkakasan</div>
                             <div class="project-category text-white-50">Hardware Engineer</div>
@@ -99,7 +114,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a class="careers-box">
-                        <img class="img-fluid" src="{% static 'home/images/gallery/data-scientist.jpg' %}" alt="" />
+                        <img class="img-fluid" src="{% static 'home/images/gallery/data-scientist.jpg' %}" alt=""/>
                         <div class="careers-box-caption">
                             <div class="career-name">Ahli Sains Data</div>
                             <div class="project-category text-white-50">Data Scientist</div>
@@ -108,7 +123,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a class="careers-box">
-                        <img class="img-fluid" src="{% static 'home/images/gallery/database-admin.jpg' %}" alt="" />
+                        <img class="img-fluid" src="{% static 'home/images/gallery/database-admin.jpg' %}" alt=""/>
                         <div class="careers-box-caption">
                             <div class="career-name">Pentadbir Pangkalan Data</div>
                             <div class="project-category text-white-50">Database Administrator</div>
@@ -117,7 +132,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a class="careers-box">
-                        <img class="img-fluid" src="{% static 'home/images/gallery/college-professor.jpg' %}" alt="" />
+                        <img class="img-fluid" src="{% static 'home/images/gallery/college-professor.jpg' %}" alt=""/>
                         <div class="careers-box-caption">
                             <div class="career-name">Profesor Kolej</div>
                             <div class="project-category text-white-50">College Professor</div>
@@ -126,7 +141,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a class="careers-box">
-                        <img class="img-fluid" src="{% static 'home/images/gallery/graphic-designer.jpg' %}" alt="" />
+                        <img class="img-fluid" src="{% static 'home/images/gallery/graphic-designer.jpg' %}" alt=""/>
                         <div class="careers-box-caption">
                             <div class="career-name">Pereka Grafik</div>
                             <div class="project-category text-white-50">Graphic Designer</div>
@@ -143,8 +158,9 @@
         <div class="row justify-content-center">
             <div class="col-lg-8 text-center">
                 <h2 class="mt-0">Hubungi Kami</h2>
-                <hr class="divider my-4" />
-                <p class="text-muted mb-5">Ingin mendapatkan maklumat lanjut? Hubungi kami melalui kaedah-kaedah berikut:</p>
+                <hr class="divider my-4"/>
+                <p class="text-muted mb-5">Ingin mendapatkan maklumat lanjut? Hubungi kami melalui kaedah-kaedah
+                    berikut:</p>
             </div>
         </div>
         <div class="row">
@@ -158,7 +174,8 @@
             </div>
             <div class="col-lg-4 ml-auto text-center">
                 <i class="fas fa-map-marked-alt fa-3x mb-3 text-muted"></i>
-                <a class="d-block" href="https://goo.gl/maps/QZEsNrCyvgLFiSWU6" target="_blank">Jalan Zaharah, Batu Pahat, Johor</a>
+                <a class="d-block" href="https://goo.gl/maps/QZEsNrCyvgLFiSWU6" target="_blank">Jalan Zaharah, Batu
+                    Pahat, Johor</a>
             </div>
         </div>
     </div>
