--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -41,7 +41,9 @@
         </div>
         <div class="col-md-5">
             <h3 class="cap">Pn. Mariatie binti Sidek</h3>
-            <p>Guru opsyen Teknologi Maklumat yang berpengalaman 3 tahun dalam pengajaran Asas Sains Komputer. Beliau merupakan seorang guru yang sabar, penyayang dan berpengetahuan dalam. Dengan usaha beliau, pelajar-pelajar telah mencapai keputusan yang cemerlang dalam PT3.</p>
+            <p>Guru opsyen Teknologi Maklumat yang berpengalaman 3 tahun dalam pengajaran Asas Sains Komputer. Beliau
+                merupakan seorang guru yang sabar, penyayang dan berpengetahuan dalam. Dengan usaha beliau,
+                pelajar-pelajar telah mencapai keputusan yang cemerlang dalam PT3.</p>
             <div class="row">
                 <div class="col">
                     <p class="cap"><strong>Pencapaian Akademik</strong></p>
@@ -73,12 +75,14 @@
     <div class="row">
         <div class="col-md-7 img-container">
             <div class="center">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="{% static 'images/rusyawati.jpg' %}" alt="">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="{% static 'images/rusyawati.jpg' %}" alt="">
             </div>
         </div>
         <div class="col-md-5">
             <h3 class="cap">Pn. Rusyawati binti Abd. Manaf</h3>
-            <p>Guru opsyen Teknologi Maklumat yang mengajar selama 3 tahun dalam Asas Sains Komputer Tingkatan 1 dan 3. Keperibadian beliau yang berdedikasi dalam pengajaran telah mempimpin beratus-ratus pelajar untuk menerusi pelajaran dalam Sains Komputer semasa Tingkatan 4.</p>
+            <p>Guru opsyen Teknologi Maklumat yang mengajar selama 3 tahun dalam Asas Sains Komputer Tingkatan 1 dan 3.
+                Keperibadian beliau yang berdedikasi dalam pengajaran telah mempimpin beratus-ratus pelajar untuk
+                menerusi pelajaran dalam Sains Komputer semasa Tingkatan 4.</p>
             <div class="row">
                 <div class="col">
                     <p class="cap"><strong>Pencapaian Akademik</strong></p>
