--- a/curriculum/templates/curriculum/base_c.html
+++ b/curriculum/templates/curriculum/base_c.html
@@ -3,7 +3,8 @@
 
 {% block material %}
 <div class="input-group mb-3">
-    <input id="from-value" type="text" class="form-control" aria-describedby="basic-addon1" oninput="convertBase('from')">
+    <input id="from-value" type="text" class="form-control" aria-describedby="basic-addon1"
+           oninput="convertBase('from')">
     <div class="input-group-append">
         <span class="input-group-text" id="basic-addon1">asas 10</span>
     </div>
