--- a/curriculum/templates/curriculum/comp_t.html
+++ b/curriculum/templates/curriculum/comp_t.html
@@ -3,21 +3,35 @@
 
 {% block material %}
 <p class="has-line-data" data-line-start="4" data-line-end="5"><img src="{% static 'images/0.png' %}" alt=""></p>
-<p class="has-line-data" data-line-start="6" data-line-end="8"><strong><em>Pemikiran komputasional</em></strong> ialah <strong>suatu proses pemikiran bagi menyelesaikan masalah</strong> oleh manusia sendiri yang dibantu oleh mesin atau kedua-duanya sekali dengan menggunakan konsep asas sains komputer.<br><br>
-Terdapat 4 teknik yang akan kita belajar semasa tingkatan 1, 2 dan 3.</p>
+<p class="has-line-data" data-line-start="6" data-line-end="8"><strong><em>Pemikiran komputasional</em></strong> ialah
+    <strong>suatu proses pemikiran bagi menyelesaikan masalah</strong> oleh manusia sendiri yang dibantu oleh mesin atau
+    kedua-duanya sekali dengan menggunakan konsep asas sains komputer.<br><br>
+    Terdapat 4 teknik yang akan kita belajar semasa tingkatan 1, 2 dan 3.</p>
 <hr>
-<h3 class="code-line" data-line-start=11 data-line-end=12><a id="Teknik_Leraian__decomposition__11"></a>Teknik Leraian <em>(decomposition)</em></h3>
+<h3 class="code-line" data-line-start=11 data-line-end=12><a id="Teknik_Leraian__decomposition__11"></a>Teknik Leraian
+    <em>(decomposition)</em></h3>
 <p class="has-line-data" data-line-start="12" data-line-end="13"><img src="{% static 'images/1.png' %}" alt=""></p>
-<p class="has-line-data" data-line-start="14" data-line-end="15"><strong>Pemecahan suatu masalah</strong> atau sistem yang kompleks kepada bahagian-bahagian yang lebih kecil. Dengan ini, kita dapat <strong>memahami sesuatu proses kerja dengan lebih mudah</strong>.</p>
+<p class="has-line-data" data-line-start="14" data-line-end="15"><strong>Pemecahan suatu masalah</strong> atau sistem
+    yang kompleks kepada bahagian-bahagian yang lebih kecil. Dengan ini, kita dapat <strong>memahami sesuatu proses
+        kerja dengan lebih mudah</strong>.</p>
 <hr>
-<h3 class="code-line" data-line-start=18 data-line-end=19><a id="Teknik_Pengecaman_Corak__pattern_recognition__18"></a>Teknik Pengecaman Corak <em>(pattern recognition)</em></h3>
+<h3 class="code-line" data-line-start=18 data-line-end=19><a id="Teknik_Pengecaman_Corak__pattern_recognition__18"></a>Teknik
+    Pengecaman Corak <em>(pattern recognition)</em></h3>
 <p class="has-line-data" data-line-start="19" data-line-end="20"><img src="{% static 'images/2.png' %}" alt=""></p>
-<p class="has-line-data" data-line-start="21" data-line-end="22"><strong>Pengenalpastian persamaan</strong> dalam pelbagai masalah atau masalah yang sama. Teknik ini membolehkan kita menghasilkan satu idea yang boleh digunakan untuk menyelesaikan masalah lain yang mempunyai persamaan.</p>
+<p class="has-line-data" data-line-start="21" data-line-end="22"><strong>Pengenalpastian persamaan</strong> dalam
+    pelbagai masalah atau masalah yang sama. Teknik ini membolehkan kita menghasilkan satu idea yang boleh digunakan
+    untuk menyelesaikan masalah lain yang mempunyai persamaan.</p>
 <hr>
-<h3 class="code-line" data-line-start=25 data-line-end=26><a id="Teknik_Peniskalaan__abstraction__25"></a>Teknik Peniskalaan <em>(abstraction)</em></h3>
-<p class="has-line-data" data-line-start="27" data-line-end="28"><strong>Pengutamaan aspek-aspek yang penting</strong> dalam suatu masalah dan <strong>meninggalkan masalah yang kurang penting</strong>. Dengan ini, kita <strong>dapat mengenal pasti faktor-faktor yang akan mempengaruhi hasil atau output yang diperlukan</strong>.</p>
+<h3 class="code-line" data-line-start=25 data-line-end=26><a id="Teknik_Peniskalaan__abstraction__25"></a>Teknik
+    Peniskalaan <em>(abstraction)</em></h3>
+<p class="has-line-data" data-line-start="27" data-line-end="28"><strong>Pengutamaan aspek-aspek yang penting</strong>
+    dalam suatu masalah dan <strong>meninggalkan masalah yang kurang penting</strong>. Dengan ini, kita <strong>dapat
+        mengenal pasti faktor-faktor yang akan mempengaruhi hasil atau output yang diperlukan</strong>.</p>
 <hr>
-<h3 class="code-line" data-line-start=30 data-line-end=31><a id="Teknik_Pengitlakan__generalisation__30"></a>Teknik Pengitlakan <em>(generalisation)</em></h3>
+<h3 class="code-line" data-line-start=30 data-line-end=31><a id="Teknik_Pengitlakan__generalisation__30"></a>Teknik
+    Pengitlakan <em>(generalisation)</em></h3>
 <p class="has-line-data" data-line-start="31" data-line-end="32"><img src="{% static 'images/3.png' %}" alt=""></p>
-<p class="has-line-data" data-line-start="33" data-line-end="34"><strong>Pembinaan model</strong> berdasarkan corak-corak yang telah dikenal pasti daripada beberapa masalah yang serupa. Model boleh dibina dalam bentuk <strong>formula</strong>, <strong>teknik</strong>, <strong>peraturan</strong> dan <strong>langkah-langkah</strong>.</p>
+<p class="has-line-data" data-line-start="33" data-line-end="34"><strong>Pembinaan model</strong> berdasarkan
+    corak-corak yang telah dikenal pasti daripada beberapa masalah yang serupa. Model boleh dibina dalam bentuk <strong>formula</strong>,
+    <strong>teknik</strong>, <strong>peraturan</strong> dan <strong>langkah-langkah</strong>.</p>
 {% endblock material %}
